make class definitions uniform

--- a/data_structures.ipynb
+++ b/data_structures.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Node(object):\n",
+    "class Node:\n",
     "    \"\"\"\n",
     "    Represent a a node in the search tree/graph.\n",
     "    Arguments:\n",
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Stack(object):\n",
+    "class Stack:\n",
     "    \"\"\"\n",
     "    Represent a stack with LIFO (last in first out) queuing\n",
     "    \"\"\"\n",
@@ -185,7 +185,7 @@
    "source": [
     "import heapq   \n",
     "\n",
-    "class PriorityQueue(object):\n",
+    "class PriorityQueue:\n",
     "    \"\"\"\n",
     "    Represent a priority queue container where each item has a priority\n",
     "    associated with it.\n",
