Add link to data_structures notebook.

--- a/uninformed_search.ipynb
+++ b/uninformed_search.ipynb
@@ -29,6 +29,7 @@
     "Your task this week is to help Sammy the Spartan on his quest by implementing some uninformed search algorithms.\n",
     "\n",
     "The quest search problem has been formulated for you in the [spartanquest](./spartanquest.ipynb) notebook.\n",
+    "The data structures you need to use are defined for you in the [data_structures](./data_structures.ipynb) notebook.\n",
     "\n",
     "In this notebook (uninformed_search), you'll implement two search algorithms.  This is the only notebook you need to submit when you complete your assignment.\n",
     "\n",
