--- a/spartanquest.ipynb
+++ b/spartanquest.ipynb
@@ -1,9 +1,49 @@
 {
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.13"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {
+     "01472e4198ee4989be57525d2760d112": {
+      "model_module": "ipycanvas",
+      "model_module_version": "2.0.0",
+      "model_name": "CanvasManagerModel",
+      "state": {
+       "_model_module": "ipycanvas",
+       "_model_name": "CanvasManagerModel",
+       "_view_name": "ErrorWidgetView",
+       "error": {},
+       "msg": "Failed to load model class 'CanvasManagerModel' from module 'ipycanvas'"
+      }
+     }
+    },
+    "version_major": 2,
+    "version_minor": 0
+   }
+  }
+ },
+ "nbformat_minor": 5,
+ "nbformat": 4,
  "cells": [
   {
-   "cell_type": "markdown",
    "id": "601079e9",
-   "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "# Spartan Quest\n",
     "\n",
@@ -15,66 +55,69 @@
     "**Do not make any modifications to this notebook.**\n",
     "## Content\n",
     "In this Jupyter notebook, we have all the components needed to represent and visulalize the quest.\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
-   "cell_type": "markdown",
    "id": "03795769",
-   "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## Installs and Imports"
-   ]
+   ],
+   "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "1a1a6c94",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "code",
    "source": [
     "!pip install import-ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d76ae6b",
+   ],
    "metadata": {
-    "scrolled": true
+    "trusted": true
    },
    "outputs": [],
-   "source": [
-    "!pip install ipycanvas"
-   ]
+   "execution_count": null
   },
   {
+   "id": "9d76ae6b",
    "cell_type": "code",
-   "execution_count": null,
-   "id": "adcd049d",
-   "metadata": {},
+   "source": [
+    "!pip install ipycanvas"
+   ],
+   "metadata": {
+    "scrolled": true,
+    "trusted": true
+   },
    "outputs": [],
+   "execution_count": null
+  },
+  {
+   "id": "adcd049d",
+   "cell_type": "code",
    "source": [
     "import import_ipynb\n",
     "import time\n",
     "import os\n",
     "from ipycanvas import hold_canvas, MultiCanvas\n",
     "from ipywidgets import Image"
-   ]
+   ],
+   "metadata": {
+    "trusted": true
+   },
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "cell_type": "markdown",
    "id": "c8c73e75",
-   "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## Main Function: _gospartans_"
-   ]
+   ],
+   "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "1c80d16b",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "code",
    "source": [
     "def gospartans(maze_name, search,  heuristic=None):        \n",
     "    if not valid_arguments(maze_name, search, heuristic):\n",
@@ -125,12 +168,16 @@
     "    return valid\n",
     "\n",
     "\n"
-   ]
+   ],
+   "metadata": {
+    "trusted": true
+   },
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "cell_type": "markdown",
    "id": "b9afd0ff",
-   "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## Problem Representation\n",
     "The Problem class is used to represent the quest as a search problem.  \n",
@@ -140,14 +187,85 @@
     "- _expand_\n",
     "\n",
     "For the heuristic implementation (informed search), you may want to use the following class variables: NORTH, SOUTH, EAST, WEST and cost.  You can access them through the _problem_ object as problem.NORTH, problem.SOUTH, problem.EAST, problem.WEST and problem.cost. "
-   ]
+   ],
+   "metadata": {}
   },
   {
+   "id": "a1ff0f0f",
+   "cell_type": "markdown",
+   "source": [
+    "## Maze Representation\n",
+    "The Maze class is used to represent the maze layout: its width, height and walls wall.   \n",
+    "You don't need to access it directly.  \n"
+   ],
+   "metadata": {}
+  },
+  {
+   "id": "3090c48c",
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cbe22dd2",
-   "metadata": {},
+   "source": [
+    "class Maze:\n",
+    "    \"\"\"\n",
+    "    Represent the maze layout: its width, height and walls\n",
+    "\n",
+    "    Arguments:\n",
+    "    width (int):  the width of the maze\n",
+    "    height (int): the height of the maze\n",
+    "\n",
+    "    Attributes:\n",
+    "    width (int):  the width of the maze\n",
+    "    height (int): the height of the maze\n",
+    "    walls (two dimensional list of booleans):\n",
+    "        Each element represents a position in the maze.\n",
+    "        True indicates that there is a wall in that position.\n",
+    "        False indicates the absence of a wall.\n",
+    "        self.walls[x][y] indicates the presence or absence of a wall\n",
+    "        at position (x, y) in the maze.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, width, height):\n",
+    "        self.walls = [[False for x in range(width)] for y in range(height)]\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "\n",
+    "    def add_wall(self, position):\n",
+    "        \"\"\"\n",
+    "        Add a wall in the specified position\n",
+    "        :param position: tuple(row, column) representing a maze position\n",
+    "        :return: None\n",
+    "        \"\"\"\n",
+    "        x, y = position\n",
+    "        self.walls[y][x] = True\n",
+    "\n",
+    "    def is_wall(self, position):\n",
+    "        \"\"\"\n",
+    "        Is there a wall in the given position?\n",
+    "        :param position: tuple(row, column) representing a maze position\n",
+    "        :return: (Boolean) True if there is a wall in that position,\n",
+    "        False otherwise\n",
+    "        \"\"\"\n",
+    "        x, y = position\n",
+    "        return self.walls[y][x]\n",
+    "\n",
+    "    def within_bounds(self, position):\n",
+    "        \"\"\"\n",
+    "        Is the given position within the maze?\n",
+    "        :param position: tuple (row, column) representing a position\n",
+    "        :return: (Boolean) True if the position is inside the maze,\n",
+    "        False otherwise\n",
+    "        \"\"\"\n",
+    "        x, y = position\n",
+    "        return (0 <= x <= self.width -1) and (0 <= y <= self.height - 1)"
+   ],
+   "metadata": {
+    "trusted": true
+   },
    "outputs": [],
+   "execution_count": null
+  },
+  {
+   "id": "f827d0a1",
+   "cell_type": "code",
    "source": [
     "class Problem:\n",
     "    \"\"\"\n",
@@ -292,96 +410,25 @@
     "\n",
     "    def nodes_expanded(self):\n",
     "        return self._nodes_expanded"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a1ff0f0f",
-   "metadata": {},
-   "source": [
-    "## Maze Representation\n",
-    "The Maze class is used to represent the maze layout: its width, height and walls wall.   \n",
-    "You don't need to access it directly.  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3090c48c",
-   "metadata": {},
+   ],
+   "metadata": {
+    "trusted": true
+   },
    "outputs": [],
-   "source": [
-    "class Maze:\n",
-    "    \"\"\"\n",
-    "    Represent the maze layout: its width, height and walls\n",
-    "\n",
-    "    Arguments:\n",
-    "    width (int):  the width of the maze\n",
-    "    height (int): the height of the maze\n",
-    "\n",
-    "    Attributes:\n",
-    "    width (int):  the width of the maze\n",
-    "    height (int): the height of the maze\n",
-    "    walls (two dimensional list of booleans):\n",
-    "        Each element represents a position in the maze.\n",
-    "        True indicates that there is a wall in that position.\n",
-    "        False indicates the absence of a wall.\n",
-    "        self.walls[x][y] indicates the presence or absence of a wall\n",
-    "        at position (x, y) in the maze.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, width, height):\n",
-    "        self.walls = [[False for x in range(width)] for y in range(height)]\n",
-    "        self.width = width\n",
-    "        self.height = height\n",
-    "\n",
-    "    def add_wall(self, position):\n",
-    "        \"\"\"\n",
-    "        Add a wall in the specified position\n",
-    "        :param position: tuple(row, column) representing a maze position\n",
-    "        :return: None\n",
-    "        \"\"\"\n",
-    "        x, y = position\n",
-    "        self.walls[y][x] = True\n",
-    "\n",
-    "    def is_wall(self, position):\n",
-    "        \"\"\"\n",
-    "        Is there a wall in the given position?\n",
-    "        :param position: tuple(row, column) representing a maze position\n",
-    "        :return: (Boolean) True if there is a wall in that position,\n",
-    "        False otherwise\n",
-    "        \"\"\"\n",
-    "        x, y = position\n",
-    "        return self.walls[y][x]\n",
-    "\n",
-    "    def within_bounds(self, position):\n",
-    "        \"\"\"\n",
-    "        Is the given position within the maze?\n",
-    "        :param position: tuple (row, column) representing a position\n",
-    "        :return: (Boolean) True if the position is inside the maze,\n",
-    "        False otherwise\n",
-    "        \"\"\"\n",
-    "        x, y = position\n",
-    "        return (0 <= x <= self.width -1) and (0 <= y <= self.height - 1)"
-   ]
+   "execution_count": null
   },
   {
-   "cell_type": "markdown",
    "id": "e22f227b",
-   "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## Visualization\n",
     "This class is used to visualize the quest and its solution.  You don't need to access it directly. "
-   ]
+   ],
+   "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d6e227df",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
+   "cell_type": "code",
    "source": [
     "class Visualization:\n",
     "    \"\"\"\n",
@@ -400,7 +447,7 @@
     "\n",
     "    \"\"\"\n",
     "    time_interval = 0.1  # decrease time_interval for faster animation\n",
-    "    size = 40  # self.size in pixel for each grid position\n",
+    "    size = 100  # self.size in pixel for each grid position\n",
     "\n",
     "\n",
     "    def __init__(self, problem, solution):  \n",
@@ -408,7 +455,7 @@
     "        self.canvas = MultiCanvas(width=self.size * problem.maze.width,\n",
     "                                       height=self.size * problem.maze.height)\n",
     "        self.canvas.layout.width = \"100%\"\n",
-    "        self.canvas.layout.height = \"auto\"\n",
+    "        self.canvas.layout.height =  \"100%\"\n",
     "        background =  self.canvas[0]\n",
     "        foreground =  self.canvas[-1]\n",
     "\n",
@@ -519,28 +566,12 @@
     "        self.canvas[0].fill_polygon([((to_x + 0.5) * self.size, (to_y + 0.5) * self.size), \n",
     "                                (arrow_x1 * self.size, arrow_y1 * self.size),\n",
     "                                 (arrow_x2 * self.size, arrow_y2 * self.size)])"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
+   ],
+   "metadata": {
+    "trusted": true
    },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "outputs": [],
+   "execution_count": null
   }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+ ]
 }
