--- a/informed_search.ipynb
+++ b/informed_search.ipynb
@@ -285,7 +285,7 @@
     "## 4. General Heuristic\n",
     "Your task now is to implement A more general heuristic to be used when the maze contains an arbitrary number of medals and these medals can be anywhere in the maze. Fill in your code in the function _gen_heuristic_. \n",
     "\n",
-    "**HINTS**: One way to relax this complex probem is to assume that there is only one medal in the maze. For each medal you choose, you get a possible admissible heuristic.  How would you then pick the best one?  \n",
+    "**HINTS**: One way to relax this complex problem is to assume that there is only one medal in the maze. For each medal you choose, you get a possible admissible heuristic.  How would you then pick the best one?  \n",
     "\n",
     "\n",
     "Make sure you implementation is **memory and time efficient**: it does not store large data structures in memory and it does not perform unnecessary computations.\n",
