--- a/spartanquest.ipynb
+++ b/spartanquest.ipynb
@@ -191,79 +191,6 @@
    "metadata": {}
   },
   {
-   "id": "a1ff0f0f",
-   "cell_type": "markdown",
-   "source": [
-    "## Maze Representation\n",
-    "The Maze class is used to represent the maze layout: its width, height and walls wall.   \n",
-    "You don't need to access it directly.  \n"
-   ],
-   "metadata": {}
-  },
-  {
-   "id": "3090c48c",
-   "cell_type": "code",
-   "source": [
-    "class Maze:\n",
-    "    \"\"\"\n",
-    "    Represent the maze layout: its width, height and walls\n",
-    "\n",
-    "    Arguments:\n",
-    "    width (int):  the width of the maze\n",
-    "    height (int): the height of the maze\n",
-    "\n",
-    "    Attributes:\n",
-    "    width (int):  the width of the maze\n",
-    "    height (int): the height of the maze\n",
-    "    walls (two dimensional list of booleans):\n",
-    "        Each element represents a position in the maze.\n",
-    "        True indicates that there is a wall in that position.\n",
-    "        False indicates the absence of a wall.\n",
-    "        self.walls[x][y] indicates the presence or absence of a wall\n",
-    "        at position (x, y) in the maze.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, width, height):\n",
-    "        self.walls = [[False for x in range(width)] for y in range(height)]\n",
-    "        self.width = width\n",
-    "        self.height = height\n",
-    "\n",
-    "    def add_wall(self, position):\n",
-    "        \"\"\"\n",
-    "        Add a wall in the specified position\n",
-    "        :param position: tuple(row, column) representing a maze position\n",
-    "        :return: None\n",
-    "        \"\"\"\n",
-    "        x, y = position\n",
-    "        self.walls[y][x] = True\n",
-    "\n",
-    "    def is_wall(self, position):\n",
-    "        \"\"\"\n",
-    "        Is there a wall in the given position?\n",
-    "        :param position: tuple(row, column) representing a maze position\n",
-    "        :return: (Boolean) True if there is a wall in that position,\n",
-    "        False otherwise\n",
-    "        \"\"\"\n",
-    "        x, y = position\n",
-    "        return self.walls[y][x]\n",
-    "\n",
-    "    def within_bounds(self, position):\n",
-    "        \"\"\"\n",
-    "        Is the given position within the maze?\n",
-    "        :param position: tuple (row, column) representing a position\n",
-    "        :return: (Boolean) True if the position is inside the maze,\n",
-    "        False otherwise\n",
-    "        \"\"\"\n",
-    "        x, y = position\n",
-    "        return (0 <= x <= self.width -1) and (0 <= y <= self.height - 1)"
-   ],
-   "metadata": {
-    "trusted": true
-   },
-   "outputs": [],
-   "execution_count": null
-  },
-  {
    "id": "f827d0a1",
    "cell_type": "code",
    "source": [
@@ -416,6 +343,81 @@
    },
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Maze Representation\n",
+    "The Maze class is used to represent the maze layout: its width, height and walls wall.   \n",
+    "You don't need to access it directly.  \n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a1ff0f0f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class Maze:\n",
+    "    \"\"\"\n",
+    "    Represent the maze layout: its width, height and walls\n",
+    "\n",
+    "    Arguments:\n",
+    "    width (int):  the width of the maze\n",
+    "    height (int): the height of the maze\n",
+    "\n",
+    "    Attributes:\n",
+    "    width (int):  the width of the maze\n",
+    "    height (int): the height of the maze\n",
+    "    walls (two dimensional list of booleans):\n",
+    "        Each element represents a position in the maze.\n",
+    "        True indicates that there is a wall in that position.\n",
+    "        False indicates the absence of a wall.\n",
+    "        self.walls[x][y] indicates the presence or absence of a wall\n",
+    "        at position (x, y) in the maze.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, width, height):\n",
+    "        self.walls = [[False for x in range(width)] for y in range(height)]\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "\n",
+    "    def add_wall(self, position):\n",
+    "        \"\"\"\n",
+    "        Add a wall in the specified position\n",
+    "        :param position: tuple(row, column) representing a maze position\n",
+    "        :return: None\n",
+    "        \"\"\"\n",
+    "        x, y = position\n",
+    "        self.walls[y][x] = True\n",
+    "\n",
+    "    def is_wall(self, position):\n",
+    "        \"\"\"\n",
+    "        Is there a wall in the given position?\n",
+    "        :param position: tuple(row, column) representing a maze position\n",
+    "        :return: (Boolean) True if there is a wall in that position,\n",
+    "        False otherwise\n",
+    "        \"\"\"\n",
+    "        x, y = position\n",
+    "        return self.walls[y][x]\n",
+    "\n",
+    "    def within_bounds(self, position):\n",
+    "        \"\"\"\n",
+    "        Is the given position within the maze?\n",
+    "        :param position: tuple (row, column) representing a position\n",
+    "        :return: (Boolean) True if the position is inside the maze,\n",
+    "        False otherwise\n",
+    "        \"\"\"\n",
+    "        x, y = position\n",
+    "        return (0 <= x <= self.width -1) and (0 <= y <= self.height - 1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3090c48c"
   },
   {
    "id": "e22f227b",
