--- a/uninformed_search.ipynb
+++ b/uninformed_search.ipynb
@@ -717,7 +717,7 @@
     "Sammy the Spartan is an eco-friendly intelligent agent powered by carrots. \n",
     "\n",
     "In our upcoming assignments we'll guide  Sammy in his quests to collect medals in a maze.  Sammy can only move North, South, West or East.  He is unable to move diagonally.  \n",
-    "Sammy's carrot consumption is determined by his moves' directions.  For example, Sammy will consume more carrots moving backawards (East) than forward (West).\n",
+    "Sammy's carrot consumption is determined by his moves' directions.  For example, Sammy will consume more carrots moving backwards (East) than forward (West).  Sammy will also consume more carrots moving North than South. The exact number of carrots consumed for each direction is specified in the _cost_ dictionary in the Problem class defined in the [spartanquest](./spartanquest.ipynb) notebook.\n",
     "\n",
     "The various positions in the maze are represented as a tuple of x and y coordinates. The top left position is (0, 0). The x coordinate increases as we move right in the grid and the y coordinate increases as we move down in the grid - as shown below.\n",
     "![image.png](attachment:image.png)"
@@ -897,7 +897,7 @@
     "Path length: 46  \n",
     "Carrots consumed: 484  \n",
     "Number of nodes expanded: 502 <-- 479 is ok too  \n",
-    "Processing time: 0.0044(sec) <-- this may be different for you  "
+    "Processing time: 0.0027(sec) <-- this may be different for you  "
    ],
    "metadata": {}
   },
@@ -961,7 +961,7 @@
     "Path length: 57  \n",
     "Carrots consumed: 468  \n",
     "Number of nodes expanded: 576  \n",
-    "Processing time: 0.0051(sec) <-- this may be different for you  "
+    "Processing time: 0.0042(sec) <-- this may be different for you  "
    ],
    "metadata": {}
   },
@@ -971,8 +971,7 @@
    "source": [
     "## Compare and Contrast\n",
     "In addition to [SJSU.txt](./SJSU.txt), several text files that represent different quests have been provided for you:  [questA.txt](./questA.txt),   [questB.txt](./questB.txt),  [questC.txt](./questC.txt),  [questD.txt](./questD.txt) and  [noway.txt](./noway.txt).\n",
-    "Use the code cells below (and add more code cells as needed) to test your implementations of bfs and ucs on the other quests provided: questA.txt through questD.txt, noway.txt.\n",
-    "What conclusions can you draw?"
+    "Use the code cells below to test your implementations of bfs and ucs on the other quests provided: questA.txt through questD.txt, noway.txt."
    ],
    "metadata": {}
   },
